--- a/src/app/view/ventas/historial-ventas/historial-ventas.component.scss
+++ b/src/app/view/ventas/historial-ventas/historial-ventas.component.scss
@@ -468,11 +468,11 @@
         color: white;
 
         &.ojo-derecho {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: var(--degradado-color) !important;
         }
 
         &.ojo-izquierdo {
-            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+            background: var(--degradado-color) !important;
         }
     }
 
